--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ main{
 
 .header{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .menu ul{
     list-style-type: none;
